[gd_scene load_steps=7 format=3 uid="uid://d36i8j1yadr2q"]

[ext_resource type="Script" uid="uid://disohkogg4ud" path="res://ScenesScripts/menus/main_menu.gd" id="1_wdgn7"]
[ext_resource type="Script" uid="uid://1aurwjtndg0w" path="res://ScenesScripts/menus/main_menu_main.gd" id="2_qgc0b"]
[ext_resource type="Script" uid="uid://b2l3u53qs8isy" path="res://ScenesScripts/menus/main_menu_instructions.gd" id="3_apcrb"]
[ext_resource type="Script" uid="uid://plisdn7xdw47" path="res://ScenesScripts/menus/main_menu_credits.gd" id="4_dh3vc"]
[ext_resource type="AudioStream" uid="uid://d1yx0kga0xfnd" path="res://Sound/Music/Drafts/Main track draft 3.wav" id="5_hif6h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pwyjb"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wdgn7")

[node name="Main" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_qgc0b")

[node name="PanelContainer" type="PanelContainer" parent="Main"]
modulate = Color(1, 1, 1, 0.67058825)
material = SubResource("ShaderMaterial_pwyjb")
layout_mode = 0
offset_left = 176.0
offset_top = 50.0
offset_right = 976.0
offset_bottom = 600.0

[node name="Title" type="RichTextLabel" parent="Main"]
layout_mode = 0
offset_left = 209.0
offset_top = 77.0
offset_right = 959.0
offset_bottom = 164.0
theme_override_font_sizes/normal_font_size = 48
text = "Signed Seal-Delivered"
tab_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start" type="RichTextLabel" parent="Main"]
layout_mode = 0
offset_left = 426.0
offset_top = 167.0
offset_right = 726.0
offset_bottom = 237.0
pivot_offset = Vector2(150, 0)
theme_override_font_sizes/normal_font_size = 30
text = "Start"
tab_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="Instructions" type="RichTextLabel" parent="Main"]
layout_mode = 0
offset_left = 426.0
offset_top = 247.0
offset_right = 726.0
offset_bottom = 317.0
pivot_offset = Vector2(150, 0)
theme_override_font_sizes/normal_font_size = 30
text = "Instructions"
tab_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="RichTextLabel" parent="Main"]
layout_mode = 0
offset_left = 426.0
offset_top = 333.0
offset_right = 726.0
offset_bottom = 403.0
pivot_offset = Vector2(150, 0)
theme_override_font_sizes/normal_font_size = 30
text = "Options
"
tab_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits" type="RichTextLabel" parent="Main"]
layout_mode = 0
offset_left = 426.0
offset_top = 422.0
offset_right = 726.0
offset_bottom = 492.0
pivot_offset = Vector2(150, 0)
theme_override_font_sizes/normal_font_size = 30
text = "Credits
"
tab_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="RichTextLabel" parent="Main"]
layout_mode = 0
offset_left = 426.0
offset_top = 507.0
offset_right = 726.0
offset_bottom = 577.0
pivot_offset = Vector2(150, 0)
theme_override_font_sizes/normal_font_size = 30
text = "Exit"
tab_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="CursorStart" type="RichTextLabel" parent="Main"]
layout_mode = 0
offset_left = 468.0
offset_top = 166.0
offset_right = 519.0
offset_bottom = 236.0
theme_override_font_sizes/normal_font_size = 30
text = ">"
tab_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="CursorInstructions" type="RichTextLabel" parent="Main"]
layout_mode = 0
offset_left = 417.0
offset_top = 246.0
offset_right = 468.0
offset_bottom = 316.0
theme_override_font_sizes/normal_font_size = 30
text = ">"
tab_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="CursorOptions" type="RichTextLabel" parent="Main"]
layout_mode = 0
offset_left = 433.0
offset_top = 327.0
offset_right = 484.0
offset_bottom = 397.0
theme_override_font_sizes/normal_font_size = 30
text = ">"
tab_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="CursorCredits" type="RichTextLabel" parent="Main"]
layout_mode = 0
offset_left = 448.0
offset_top = 416.0
offset_right = 499.0
offset_bottom = 486.0
theme_override_font_sizes/normal_font_size = 30
text = ">"
tab_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="CursorExit" type="RichTextLabel" parent="Main"]
layout_mode = 0
offset_left = 479.0
offset_top = 507.0
offset_right = 530.0
offset_bottom = 577.0
theme_override_font_sizes/normal_font_size = 30
text = ">"
tab_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="Instructions" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_apcrb")

[node name="PanelContainer" type="PanelContainer" parent="Instructions"]
modulate = Color(1, 1, 1, 0.67058825)
material = SubResource("ShaderMaterial_pwyjb")
layout_mode = 0
offset_left = 176.0
offset_top = 50.0
offset_right = 976.0
offset_bottom = 600.0

[node name="Title" type="RichTextLabel" parent="Instructions"]
layout_mode = 0
offset_left = 209.0
offset_top = 77.0
offset_right = 959.0
offset_bottom = 164.0
theme_override_font_sizes/normal_font_size = 48
text = "Instructions"
tab_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start" type="RichTextLabel" parent="Instructions"]
layout_mode = 0
offset_left = 282.0
offset_top = 165.0
offset_right = 900.0
offset_bottom = 252.0
pivot_offset = Vector2(150, 0)
theme_override_font_sizes/normal_font_size = 30
text = "Bring the things to the guy "
tab_size = 6

[node name="Instructions" type="RichTextLabel" parent="Instructions"]
layout_mode = 0
offset_left = 353.0
offset_top = 247.0
offset_right = 834.0
offset_bottom = 317.0
pivot_offset = Vector2(150, 0)
theme_override_font_sizes/normal_font_size = 30
text = "Bring this thing"
tab_size = 6

[node name="Options" type="RichTextLabel" parent="Instructions"]
layout_mode = 0
offset_left = 370.0
offset_top = 333.0
offset_right = 726.0
offset_bottom = 403.0
pivot_offset = Vector2(150, 0)
theme_override_font_sizes/normal_font_size = 30
text = "To this guy"
tab_size = 6

[node name="Credits" type="RichTextLabel" parent="Instructions"]
layout_mode = 0
offset_left = 354.0
offset_top = 422.0
offset_right = 726.0
offset_bottom = 492.0
pivot_offset = Vector2(150, 0)
theme_override_font_sizes/normal_font_size = 30
text = "Don't fall in the water"
tab_size = 6

[node name="Exit" type="RichTextLabel" parent="Instructions"]
layout_mode = 0
offset_left = 257.0
offset_top = 500.0
offset_right = 924.0
offset_bottom = 588.0
pivot_offset = Vector2(150, 0)
theme_override_font_sizes/normal_font_size = 30
text = "Bigger items reward more but slow you down more"
tab_size = 6

[node name="CursorInstructions" type="RichTextLabel" parent="Instructions"]
layout_mode = 0
offset_left = 281.0
offset_top = 247.0
offset_right = 332.0
offset_bottom = 317.0
theme_override_font_sizes/normal_font_size = 30
text = ">"
tab_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="CursorOptions" type="RichTextLabel" parent="Instructions"]
layout_mode = 0
offset_left = 274.0
offset_top = 327.0
offset_right = 325.0
offset_bottom = 397.0
theme_override_font_sizes/normal_font_size = 30
text = ">"
tab_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_dh3vc")

[node name="PanelContainer" type="PanelContainer" parent="Credits"]
modulate = Color(1, 1, 1, 0.67058825)
material = SubResource("ShaderMaterial_pwyjb")
layout_mode = 0
offset_left = 176.0
offset_top = 50.0
offset_right = 976.0
offset_bottom = 600.0

[node name="Title" type="RichTextLabel" parent="Credits"]
layout_mode = 0
offset_left = 209.0
offset_top = 62.0
offset_right = 959.0
offset_bottom = 144.0
theme_override_font_sizes/normal_font_size = 48
text = "Credits"
tab_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start" type="RichTextLabel" parent="Credits"]
layout_mode = 0
offset_left = 280.0
offset_top = 163.0
offset_right = 880.0
offset_bottom = 233.0
pivot_offset = Vector2(150, 0)
theme_override_font_sizes/normal_font_size = 30
text = "SobMasoon - music, sound effects"
tab_size = 6

[node name="Instructions" type="RichTextLabel" parent="Credits"]
layout_mode = 0
offset_left = 280.0
offset_top = 224.0
offset_right = 880.0
offset_bottom = 294.0
pivot_offset = Vector2(150, 0)
theme_override_font_sizes/normal_font_size = 30
text = "ivy_tvq - "
tab_size = 6

[node name="Options" type="RichTextLabel" parent="Credits"]
layout_mode = 0
offset_left = 280.0
offset_top = 300.0
offset_right = 880.0
offset_bottom = 370.0
pivot_offset = Vector2(150, 0)
theme_override_font_sizes/normal_font_size = 30
text = "bonnacon - art"
tab_size = 6

[node name="Credits" type="RichTextLabel" parent="Credits"]
layout_mode = 0
offset_left = 280.0
offset_top = 370.0
offset_right = 880.0
offset_bottom = 440.0
pivot_offset = Vector2(150, 0)
theme_override_font_sizes/normal_font_size = 30
text = "JuiceMage - "
tab_size = 6

[node name="Credits2" type="RichTextLabel" parent="Credits"]
layout_mode = 0
offset_left = 280.0
offset_top = 427.0
offset_right = 762.0
offset_bottom = 497.0
pivot_offset = Vector2(150, 0)
theme_override_font_sizes/normal_font_size = 30
text = "Neerios - Programming"
tab_size = 6

[node name="Credits3" type="RichTextLabel" parent="Credits"]
layout_mode = 0
offset_left = 280.0
offset_top = 484.0
offset_right = 762.0
offset_bottom = 554.0
pivot_offset = Vector2(150, 0)
theme_override_font_sizes/normal_font_size = 30
text = "Made in Godot"
tab_size = 6

[node name="Exit" type="RichTextLabel" parent="Credits"]
layout_mode = 0
offset_left = 440.0
offset_top = 520.0
offset_right = 740.0
offset_bottom = 590.0
pivot_offset = Vector2(150, 0)
theme_override_font_sizes/normal_font_size = 30
text = "Back"
tab_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="CursorExit" type="RichTextLabel" parent="Credits"]
layout_mode = 0
offset_left = 489.0
offset_top = 520.0
offset_right = 540.0
offset_bottom = 590.0
theme_override_font_sizes/normal_font_size = 30
text = ">"
tab_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_hif6h")
